@@ -3,6 +3,7 @@ from sqlalchemy import engine_from_config
 
 from .models import DBSession
 
+
 def main(global_config, **settings):
     """ This function returns a Pyramid WSGI application.
     """
@@ -13,4 +14,3 @@ def main(global_config, **settings):
     config.add_route('home', '/')
     config.scan()
     return config.make_wsgi_app()
-
