@@ -16,6 +16,7 @@ from zope.sqlalchemy import ZopeTransactionExtension
 DBSession = scoped_session(sessionmaker(extension=ZopeTransactionExtension()))
 Base = declarative_base()
 
+
 class MyModel(Base):
     __tablename__ = 'models'
     id = Column(Integer, primary_key=True)
@@ -25,4 +26,3 @@ class MyModel(Base):
     def __init__(self, name, value):
         self.name = name
         self.value = value
-
