@@ -1,5 +1,6 @@
 from pyramid.config import Configurator
 
+
 def main(global_config, **settings):
     """ This function returns a Pyramid WSGI application.
     """
