@@ -2,9 +2,11 @@ from pyramid.config import Configurator
 from pyramid_zodbconn import get_connection
 from .models import appmaker
 
+
 def root_factory(request):
     conn = get_connection(request)
     return appmaker(conn.root())
+
 
 def main(global_config, **settings):
     """ This function returns a Pyramid WSGI application.
