@@ -1,7 +1,9 @@
 from persistent.mapping import PersistentMapping
 
+
 class MyModel(PersistentMapping):
     __parent__ = __name__ = None
+
 
 def appmaker(zodb_root):
     if not 'app_root' in zodb_root:
